# ART

./: .env.example  .gitignore  .skyignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES  kill-gpu-processes.sh  launch-cluster.sh  pyproject.toml  skypilot-config.yaml
dev/: mp.ipynb  profile.ipynb  service.py  unsloth.ipynb  yes-and-no-unsloth.ipynb  yes-no-maybe.ipynb
dev/new_models/: benchmark_inference.py  gemma3.py  prompts.json  qwen3_try.ipynb  qwen3_try.py
dev/qwen3/: benchmark_inference.py  qwen3_try.py
dev/swebench/: config.py  eval.py  instances.py  logs.py  rollout.py  run.py  sandboxes.py  train.ipynb  trl.ipynb  vllm.ipynb
docs/: README.md  analytics.js  base-models.mdx  docs.json  package.json  pnpm-lock.yaml
docs/fundamentals/: art-client.mdx  art-server.mdx  training-loop.mdx
docs/getting-started/: introduction.mdx  notebooks.mdx  overview.mdx  quick-start.mdx
examples/: 2048.ipynb  benchmarking_comparison_models.py  compare.ipynb  prisoners-dilemma.ipynb  rock-paper-tool-use.ipynb  temporal-clue-curriculum-learning.ipynb  temporal-clue-multi-step.ipynb  temporal-clue-openpipe.ipynb  temporal-clue-qwen-14b.ipynb  temporal-clue-tool-use.ipynb  temporal-clue-unsloth.ipynb  temporal-clue.ipynb  tic-tac-toe-old.ipynb  tic-tac-toe-unsloth.ipynb  tic-tac-toe.ipynb
examples/2048/: 2048-dev.ipynb  2048-multi-turn.ipynb  2048-single-turn.ipynb  2048.ipynb  2048.py  2048_single_turn.ipynb  2048_single_turn_interim_reward.ipynb  benchmark_2048.ipynb  old_benchmark_2048.ipynb  rollout.py  utils.py
examples/art-e/: .env.example  .gitignore  CLAUDE.md  README.md  all_models.py  benchmark_prompted_models.ipynb  email_search_example.py  email_search_tools.py  enron_processor.py  explore-sample-queries.ipynb  explore.ipynb  generate_sample_queries.py  hello.py  local_email_db.py  pyproject.toml  query_iterators.py  requirements.txt  rollout.py  run_training.py  run_training_job.py  skypilot.yaml  test_caching.py  train.py  types_enron.py  utils.py
examples/art-e/.cursor/rules/: no-defensive-programming.mdc
examples/art-e/art_e/: email_search_tools.py  judge_group.py  project_types.py  rollout.py  train.py
examples/art-e/art_e/data/: explore_synthetic_questions.py  generate_synthetic_question_data.py  inspect_emails.py  local_email_db.py  query_iterators.py  test_and_train_inboxes.py  types_enron.py
examples/art-e/art_e/evaluate/: benchmark.py  benchmark_prompted_models.py  charts.py  create_blog_charts.py  create_ppt_charts.py  display_run_html.py  explore.py  explore_o3_errors.py  llm_judge_charts.py  load_trajectories.py  push_agent_to_hf.py  sync_trajectories_from_s3.sh
examples/art-e/art_email/: email_search_tools.py  rollout.py  train.py
examples/art-e/art_email/data/: explore-sample-queries.ipynb  local_email_db.py  query_iterators.py  types_enron.py
examples/art-e/art_email/evaluate/: benchmark.py  benchmark_prompted_models.py  evaluate.py
examples/art-e/email_deep_research/: benchmark.py  email_search_tools.py  project_types.py  query_iterators.py  rollout.py  train.py  utils.py
examples/art-e/email_deep_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/art-e/email_deep_research/evaluate/: benchmark.py  benchmark_prompted_models.py  evaluate.py
examples/art-e/jarvis_mail/: email_search_tools.py  rollout.py  train.py
examples/art-e/jarvis_mail/evaluate/: benchmark.py  benchmark_prompted_models.py  evaluate.py
examples/art-e/notebooks/: evaluate.py
examples/art-e/scripts/: benchmark_prompted_models.py  run_training_job.py  test_email_search_tools.py
examples/art-e/src/art/: types.py
examples/codenames/: Codenames_RL.ipynb  codenames_words.json
examples/grpo_trainer_lora_model/: adapter_config.json
examples/hn_title_generator/: reference_grpo_trainer.py  shared_cache.db  skypilot-reference-grpo-trainer.yaml  skypilot.yaml  train.py  utils.py
examples/roflbot/: .gitignore
examples/temporal_clue/: temporal-clue-torchtune.ipynb  temporal-clue.ipynb  temporal-clue.py
examples/tic_tac_toe/: benchmark-prompted-models-old.ipynb  benchmark-prompted-models.ipynb  benchmark_tic_tac_toe.ipynb  game_utils.py  old_benchmark_tic_tac_toe.ipynb  rollout.py  tic-tac-toe-dev.ipynb  tic-tac-toe-local.ipynb  tic-tac-toe-local.py  tic-tac-toe-unsloth.ipynb  tic-tac-toe.ipynb  tic-tac-toe.py  utils.py
examples/tic_tac_toe_self_play/: deploy_step.py  game_utils.py  gather_trajectory_groups_by_index.py  rollout.py  train.py  train_o4_mini.py
scripts/: deploy-model.py  publish.sh  setup.sh
src/art/: __init__.py  abstract.py  api.py  backend.py  batches.py  cli.py  errors.py  gather.py  gather_groups.py  gather_trajectories.py  guided_completion.py  interface-snapshot.py  model.py  openai-client.py  openai.py  tqdm.py  trajectories.py  types.py  utils.py  uvicorn_logging_config.json  vllm.py  vllm_logging_config.json
src/art/config/: __init__.py  engine.py  model.py  openai_server.py
src/art/dev/: __init__.py  engine.py  model.py  openai_server.py  torchtune.py  train.py
src/art/local/: __init__.py  api.py  backend.py  checkpoints.py  model_configs.py  pack.py  recipe.py  s3_sync.py  service.py  state.py  tokenize.py  train.py  tune.py  vllm.py
src/art/model_service/: __init__.py
src/art/skypilot/: __init__.py  api.py  backend.py  stop_server.py  utils.py
src/art/torchtune/: batch.py  config.py  config.yaml  recipe.py  service.py  train.sh
src/art/unsloth/: UnslothGRPOTrainer.py  __init__.py  api.py  async_multiprocessing_engine.py  checkpoints.py  config.py  grpo.py  model.py  model_configs.py  model_service.py  pack.py  service.py  state.py  tokenization.py  tokenize.py  train.py  tune.py  vllm.py  vllm_utils.py
src/art/utils/: __init__.py  benchmark_rollout.py  deploy_model.py  format_message.py  get_model_step.py  get_repo_root_path.py  get_trajectory_messages.py  iterate_dataset.py  limit_concurrency.py  litellm.py  litellm_utils.py  log_http_errors.py  output_dirs.py  retry.py  s3.py  to_messages.py  (+1 more)
src/mp_actors/: __init__.py  move.py  traceback.py
(+17 files in other folders)
