[project]
name = "openpipe-art"
version = "0.1.16"
description = "The OpenPipe Agent Reinforcement Training (ART) library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.45.2 ; sys_platform == 'linux'",
    "matplotlib>=3.10.1",
    "openai>=1.65.5",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchao>=0.9.0",
    "unsloth ; sys_platform == 'linux'",
    "unsloth-zoo ; sys_platform == 'linux'",
    "vllm==0.7.3",
    "wandb>=0.19.8",
    "peft>=0.14.0",
    "typer>=0.15.2",
    "trl==0.15.2",
    "tblib>=3.0.0",
    "litellm>=1.63.0",
    "polars>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/art", "src/mp_actors"]

[tool.hatch.build]
sources = ["src"]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openpipe>=4.49.0",
    "panza",
    "polars>=1.26.0",
    "skypilot[aws,cudo,do,fluidstack,gcp,lambda,paperspace,runpod]>=0.8.0",
    "hatch>=1.14.1",
]
override-dependencies = [
    "bitsandbytes; sys_platform == 'linux'",
    "unsloth ; sys_platform == 'linux'",
    "unsloth-zoo ; sys_platform == 'linux'",
    "xformers; sys_platform == 'linux'",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/bradhilton/unsloth" }
unsloth-zoo = { git = "https://github.com/bradhilton/unsloth-zoo" }
panza = { git = "https://github.com/corbt/panza.git" }
