[project]
name = "enron-email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.1",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "kaggle>=1.5.12",
    "mail-parser>=3.15.0",
    "pandas>=1.3.0",
    "pip>=25.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.62.0",
]
