[project]
name = "jarvis-mail"
version = "0.1.0"
description = "Deep learning research for email search and processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.4.1",
    "diskcache>=5.6.3",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "kaggle>=1.5.12",
    "langchain-core>=0.3.51",
    "mail-parser>=3.15.0",
    "matplotlib>=3.10.1",
    "openpipe-art",
    "pandas>=1.3.0",
    "panza>=0.1.0",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.62.0",
    "transformers>=4.50.3",
    "skypilot[nebius,runpod]>=0.8.1",
    "openpipe==4.49.0",
    "litellm>=1.65.0.post1",
    "ipywidgets>=8.1.6",
    "polars",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
benchmark-prompted-models = "email_deep_research.scripts.benchmark_prompted_models:main"

[tool.setuptools.packages.find]
include = ["email_deep_research*"]

[tool.uv.sources]
openpipe-art = { path = "../ART", editable = true }
